# portfolio-projects

./: .gitignore  README.md  pyproject.toml
helpers/: __init__.py  eda.py
notebooks/: 00_data_exploration.ipynb  00_data_exploration_structured.ipynb  01_baseline_forecasting.ipynb  02_reorder_point_simulation.ipynb  03_allocation_priority.ipynb  Data_Exploration.ipynb
scripts/: check_env.py
src/retail_replenishment/: README.md  __init__.py  config.py
src/retail_replenishment/allocation/: __init__.py  priority_score.py
src/retail_replenishment/data/: __init__.py  load_datasets.py
src/retail_replenishment/features/: __init__.py  calendar_features.py
src/retail_replenishment/forecasting/: __init__.py  baseline_models.py
src/retail_replenishment/inventory/: __init__.py  reorder_policy.py
src/retail_replenishment/simulation/: __init__.py  inventory_simulator.py
src/retail_replenishment/visualization/: plots.py
tests/: test_eda.py  test_imports.py
