[project]
name = "retail-replenishment-allocation-engine"
description = "Retail replenishment and allocation analytics portfolio project scaffold"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "statsforecast",
  "mlforecast",
  "datasetsforecast",
  "lightgbm",
  "polars",
  "pyarrow",
  "duckdb",
  "matplotlib",
  "plotly",
  "jupyter",
  "ipykernel",
  "pydantic",
  "typer",
  "rich",
  "loguru",
  "seaborn>=0.13.2",
  "fastparquet>=2026.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
  "nbstripout",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "*.ipynb",
  "data/m5",
  "tmp_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
]
